--- a/OMSI 2/maps/Woodlands Town/ailists.cfg
+++ b/OMSI 2/maps/Woodlands Town/ailists.cfg
@@ -202,6 +202,13 @@ Vehicles\MAN_SD202\MAN_D92.bus
 3008				Beige
 3009				Beige
 3010				Beige
+3011				Beige
+3012				Beige
+3013				Beige
+3014				Beige
+3015				Beige
+3016				Beige
+3017				Beige
 [end]
 
 [aigroup_depot]
@@ -215,6 +222,39 @@ Vehicles\MAN_NL_NG\MAN_GN92_main.bus
 2140		Testanstrich
 2141		Testanstrich
 2142		Testanstrich
+[end]
+
+
+[aigroup_depot]
+Buses Bendy 965
+Woodlands Town [K++]
+
+[aigroup_depot_typgroup_2]
+Vehicles\MAN_NL_NG\MAN_GN92_main.bus
+2143		Testanstrich
+2144		Testanstrich
+[end]
+
+
+[aigroup_depot]
+Buses Bendy 964
+Woodlands Town [K++]
+
+[aigroup_depot_typgroup_2]
+Vehicles\MAN_NL_NG\MAN_GN92_main.bus
+2145		Testanstrich
+2146		Testanstrich
+[end]
+
+
+[aigroup_depot]
+Buses Rigid 964
+Woodlands Town [K++]
+
+[aigroup_depot_typgroup_2]
+Vehicles\MAN_NL_NG\MAN_EN92_main.bus
+2041				Beige
+2042				Beige
 [end]
 
 
